<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="80dp"
            android:contentDescription="@string/pahadi_uncle_logo_cont_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/verification_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/verification_tv"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/mobile_number_verification"
            app:layout_constraintBottom_toTopOf="@id/verification_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/verification_msg"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_code_msg"
            app:layout_constraintBottom_toTopOf="@id/otp_view" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            app:bar_active_color="@color/orange_dark"
            app:bar_enabled="true"
            app:bar_inactive_color="@color/orange_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63"
            app:length="4" />

        <TextView
            android:id="@+id/incorrect_otp_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_otp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_view"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/resend_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/didn_t_receive_code"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/resend"
            app:layout_constraintTop_toBottomOf="@+id/incorrect_otp_message"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/resend"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resend_msg"
            tools:layout_editor_absoluteX="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_20_blue"
            android:elevation="-1dp"
            app:layout_constraintBottom_toTopOf="@id/resend_msg"
            app:layout_constraintTop_toBottomOf="@id/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
