<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="authVM"
            type="com.pahadi.uncle.presentation.login.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_20_blue">

            <LinearLayout
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/seller_registration_tv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_location"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/building_no"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_10_white"
                    android:hint="@string/building_no"

                    android:padding="15dp"
                    android:text="@={authVM.buildingNumber}"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_10_white"
                    android:hint="@string/location"
                    android:inputType="textPostalAddress"
                    android:padding="15dp"
                    android:autofillHints="Colony"
                    android:text="@={authVM.location}"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/landmark"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:autofillHints="Square"
                    android:background="@drawable/bg_10_white"
                    android:hint="@string/landmark"
                    android:inputType="textPostalAddress"
                    android:padding="15dp"
                    android:text="@={authVM.landmark}"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:autofillHints="PinCode"
                    android:background="@drawable/bg_10_white"
                    android:hint="@string/pin_code"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@{authVM.pinCode}"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
                <EditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:autofillHints="Haryana"
                    android:background="@drawable/bg_10_white"
                    android:hint="@string/state"
                    android:inputType="textPostalAddress"
                    android:padding="15dp"
                    android:text="@={authVM.state}"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:autofillHints="City"
                    android:background="@drawable/bg_10_white"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:padding="15dp"
                    android:visibility="gone"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="0dp"
                    android:layout_marginTop="5dp"
                    android:background=  "@drawable/bg_10_white">

                    <Spinner
                        android:id="@+id/pro_city"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/black"
                        android:inputType="number"
                        android:saveEnabled="true"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray" />
                </FrameLayout>

                <EditText
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:autofillHints="District"
                    android:background="@drawable/bg_10_white"
                    android:hint="District"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={authVM.district}"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray" />



                <androidx.constraintlayout.helper.widget.Flow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:constraint_referenced_ids="seller_registration_tv,building_no" />
            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_10_gradient"
            android:text="@string/submit"
            android:onClick="@{()->authVM.register()}"
            android:textColor="@android:color/white" />

    </LinearLayout>
</layout>
