<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pahadi.uncle.presentation.login.AuthViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:isScrollContainer="true"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp"

        tools:context=".presentation.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/pahadi_uncle_logo_cont_desc"
            android:scaleType="fitCenter"

            android:src="@drawable/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_20_blue">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/please_enter_your_10_digit_mobile_number"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/mobile_no_et"
                style="@style/white_bg_et"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@={viewModel.mobileNo}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_10_gradient"
            android:enabled="@{viewModel.isMobileNoValid}"
            android:onClick="@{()->viewModel.login()}"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/white" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:constraint_referenced_ids="logo,login_layout,submit"
            app:flow_verticalStyle="spread_inside"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
