<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pahadi.uncle.presentation.login.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp"
        tools:context=".presentation.signup.RegistrationFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/pahadi_uncle_logo_cont_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_20_blue"
            android:paddingVertical="20dp"
            android:paddingHorizontal="20dp">

            <EditText
                android:id="@+id/full_name"
                style="@style/white_bg_et"
                android:capitalize="sentences"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/full_name"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@={viewModel.userName}" />

            <TextView
                android:id="@+id/mobile_no_et"
                style="@style/white_bg_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/full_name"

                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="@{viewModel.mobileNo}"
                tools:text="112233566" />
            <EditText
                android:id="@+id/email"
                style="@style/white_bg_et"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/mobile_no_et"
                android:text="@={viewModel.email}"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/agent_code"
                style="@style/white_bg_et"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/agent_code_optional"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:text="@={viewModel.agentCode}" />
            <TextView
                android:id="@+id/agentcode_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/agent_code"
                app:layout_constraintEnd_toEndOf="@id/agent_code"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:text="@{viewModel.erroragentcode}"
                android:textColor="@color/red"
                tools:ignore="MissingConstraints" />


            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:constraint_referenced_ids="full_name,mobile_no_et,agent_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/registration_layout"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:enabled="@{viewModel.isUserNameValid()}"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:constraint_referenced_ids="logo,registration_layout,submit"
            app:flow_verticalStyle="spread_inside" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
