<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.pahadi.uncle.presentation.agent.login.AgentLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp"
        tools:context=".presentation.agent.login.">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:indicatorColor="@color/orange_dark"
            app:trackColor="@android:color/white" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/pahadi_uncle_logo_cont_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/login_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="@drawable/bg_20_blue"
            app:layout_constraintBottom_toTopOf="@+id/submit"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/agent_login"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/agent_email_et"
                style="@style/white_bg_et"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@={viewModel.email.value}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.email.errorMessage}"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintEnd_toEndOf="@+id/agent_email_et"
                app:layout_constraintTop_toBottomOf="@id/agent_email_et"
                tools:text="error" />

            <EditText
                android:id="@+id/agent_password_et"
                style="@style/white_bg_et"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:text="@={viewModel.password.value}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/agent_email_et" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.password.errorMessage}"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintEnd_toEndOf="@+id/agent_password_et"
                app:layout_constraintTop_toBottomOf="@id/agent_password_et"
                tools:text="error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/button_tint"
            android:enabled="@{viewModel.isFormValid()}"
            android:onClick="@{()->viewModel.loginAgent()}"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
